Added sound event, updated BetonQuest to 3.0 and implemented bug-fixes.